src/Test/Fixtures/Good/Arrays/zeroLengthU16ArrayDeclaration.lf
let ints : [u16; 0] = [];
