src/Test/Fixtures/Bad/Arrays/missingInitializerInArrayDeclaration.lf
let ints: [i32; 3] = ;